@@ -9,7 +9,7 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
           MD5[0]=895f58e44357e367b300aa47279134c7
         WEB_SITE=http://www.samba.org
          ENTERED=20010922
-         UPDATED=20021120
+         UPDATED=20021209
       LICENSE[0]=GPL
       MAINTAINER="Jeff Schmidt <jschmidt@fnal.gov>"
            SHORT="Samba provides seamless file and print services to SMB/CIFS clients."
