@@ -1,0 +1,5 @@
+#
+# Remove all possible scripts and links.
+#
+rm -f /etc/rc*.d/*50samba
+rm -f /etc/init.d/samba.sh
