@@ -1,3 +1,10 @@
+2002-12-09  Eric Schabell <eschabell@sourcemage.org>
+
+		Added samba.sh, removed xinetd startup as it was borked, 
+		added POST_REMOVE and modified BUILD to install and remove
+		symlinks correctly, UPDATE filed bumped for correct install,
+		fixes bugs #1536 and #1705.
+
 2002-11-20  Eric Schabell <eschabell@sourcemage.org>
 
 		IMPORTANT: Security bugfix for Samba
